--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -251,7 +251,7 @@ body{
     border-radius: 75px;
     width: 70%;
     min-width: 240px;
-    border: 3px solid #f1564e;
+    border: 3px solid red;
 }
 
 
@@ -467,6 +467,7 @@ body{
 .nav-logo{
     font-size: 40px;
     margin-top: 20px;
+    /* height: 50px; */
     color: red;
     text-decoration: none;
     /* font-family: 'Croissant One', cursive; */
@@ -475,6 +476,35 @@ body{
     background-color: #BDD5E8;
     width: 200px;
     border-radius: 10px;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+    position: relative;
+    overflow: hidden;
+}
+
+.nav-logo::before{
+    content: '';
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.3);
+    /* background-color: black; */
+    height: 100%;
+    width: 80px;
+    /* border-radius: 10%; */
+    rotate: 5deg;
+    left: -80px;
+    translate: -12px 0px;
+}
+
+.nav-logo:hover:before{
+    animation: slide 0.8s;
+}
+
+@keyframes slide{
+    0%,100%{
+        left: -80px;
+    }
+    50%{
+        left: 100%;
+    }
 }
 
 .nav-logo a span{
@@ -546,8 +576,23 @@ body{
     font-weight: 700;
 }
 
+#language{
+    font-style: italic;
+    transition: all 0.3s ease; 
+
+}
+
+#language:before{
+    transition: all 0.3s ease; 
+    /* content: "";
+    position: absolute;
+    background-color: red;
+    animation: animate 4s steps(12) infinite; */
+}
+
 .bio-desc2 span{
-    color: #f1564e;
+    /* color: #f1564e; */
+    color: red;
 }
 
 .bio-desc3{
