--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -1447,7 +1447,7 @@ span-but{
 
 .project-box9{
     display: block;
-    background: url(/portfolio-2023/portfolio/img/luxaryfreedom.myshopify.com_.png) no-repeat;
+    background: url(luxaryfreedom.myshopify.com_.png) no-repeat;
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -1462,7 +1462,7 @@ span-but{
 }
 .project-box10{
     display: block;
-    background: url(/portfolio-2023/portfolio/img/Vegan.png) no-repeat;
+    background: url(Vegan.png) no-repeat;
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -1478,7 +1478,7 @@ span-but{
 
 .project-box11{
     display: block;
-    background: url(/portfolio-2023/portfolio/img/tiffany3.png) no-repeat;
+    background: url(tiffany3.png) no-repeat;
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -1494,7 +1494,7 @@ span-but{
 
 .project-box12{
     display: block;
-    background: url(/portfolio-2023/portfolio/img/bunnys.png) no-repeat;
+    background: url(bunnys.png) no-repeat;
     background-size: cover;
     width: 100%;
     height: 100%;
